# noise

./: .gitignore  README.md  agents.md  progress.md  pyproject.toml  sitecustomize.py
docs/: architecture.md  manual-x-grok-idea-sourcing.md
docs/plans/: 2026-04-23-noise-engine.md
examples/humanoid-household/: brief.md  comments.jsonl
ideas/manual-x-grok/2026-04-23/: collected-ideas-summary.txt  grok-ideas-parsed.json  grok-ideas-v3-parsed.json  (+11 more)
memory/serena/: autonomous-taxi-storyboard-reference__2026-04-24-0048__passed.md  grok-prompt-engineering__2026-04-23-1911__passed.md  grok-v3-storyboard-images__2026-04-23-2016__passed.md  guivm-seoul-9shot-storyboards__2026-04-23-2242__passed.md  guivm-timeout-hardening__2026-04-23-0754__passed.md  noise-engine__2026-04-23-0745__passed.md  post-prompt-storyboards__2026-04-23-1917__passed.md  seedance-storyboard-references__2026-04-23-2309__passed.md  x-grok-idea-sourcing__2026-04-23-0940__passed.md
prompts/: prompt_1_tension_analyzer.md  prompt_2_comment_simulator.md  prompt_3_angle_selector.md  prompt_4_storyboard_director.md  prompt_5_copy_director.md  prompt_6_safety_editor.md  prompt_bundle_orchestrator.md  user_storyboard_image_prompt_template.txt  x_grok_noise_idea_prompt_template.md
src/noise_engine/: __init__.py  cli.py  corpus.py  grok_parser.py  guivm.py  local_client.py  models.py  pipeline.py  prompting.py
tests/: test_cli.py  test_corpus.py  test_grok_parser.py  test_pipeline.py
tools/manual/: generate_guivm_storyboard_images.py  generate_prompt_storyboard_image.py  x_grok_cdp_manual_probe.js
(+72 files in other folders)
