[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "noise-engine"
version = "0.1.0"
description = "Interpretation-collision design engine for comment-driving social concepts"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["requests>=2.31"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
